# vboxbmc

./: README.rst  requirements.txt  setup.cfg
vboxbmc/: __init__.py  config.py  control.py  exception.py  log.py  manager.py  utils.py  vbmc.py
vboxbmc/cmd/: vbmc.py  vbmcd.py
