[metadata]
name = vboxbmc
summary = Create virtual BMCs for controlling virtual instances via IPMI
description-file =
    README.rst
author = Rajesh
author-email = rajesh.kudaka@imaginea.com 
home-page = 
python-requires = >=2.7
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    vboxbmc

[entry_points]
console_scripts =
    vbmc = vboxbmc.cmd.vbmc:main
    vbmcd = vboxbmc.cmd.vbmcd:main

vboxbmc =
    add = vboxbmc.cmd.vbmc:AddCommand
    delete = vboxbmc.cmd.vbmc:DeleteCommand
    start = vboxbmc.cmd.vbmc:StartCommand
    stop = vboxbmc.cmd.vbmc:StopCommand
    list = vboxbmc.cmd.vbmc:ListCommand
    show = vboxbmc.cmd.vbmc:ShowCommand
